--- a/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/template/FoclStructWidget.html
+++ b/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/template/FoclStructWidget.html
@@ -1,2 +1,17 @@
 <div data-dojo-type="${baseClass}" data-dojo-attach-point="focusNode">
+
+    <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols:1">
+
+        <div data-dojo-type="dijit/form/ValidationTextBox"
+            data-dojo-props="required: false"
+            data-ngw-serialize="settlement"
+            title="Населенный пункт" style="width: 100%">
+        </div>
+
+        <div data-dojo-type="dijit/form/ValidationTextBox"
+            data-dojo-props="required: false"
+            data-ngw-serialize="region"
+            title="Суб" style="width: 100%">
+        </div>
+    </div>
 </div>
