--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -116,7 +116,8 @@
                          data-dojo-attach-point="resourcesTablePane"
                          data-dojo-type="dijit/layout/ContentPane"
                          data-dojo-props="region: 'bottom', splitter: true, gutters: false"
-                         style="padding: 0; height: 100px">
+                         style="padding: 0; height: 100px; overflow: hidden">
+                        <div id="resourcesTable" style="height: 100%"></div>
                     </div>
                 </div>
 
