Загрузка дерева ресурсов (нерабочая)

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -160,6 +160,7 @@
                             data-dojo-type="dijit/layout/ContentPane"
                             data-dojo-props="region: 'center'"
                             style="padding: 0">
+                            <div id="resourcesTree"></div>
                         </div>
 
                     </div>
