--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -56,19 +56,19 @@
                         <div data-dojo-attach-point="leftToolbarSwitch"
                              data-dojo-attach-event="onChange: switchLeftToolbar"
                              data-dojo-type="dijit/form/ToggleButton"
-                             data-dojo-props="iconClass: 'iconLeftPanel', showLabel: false, checked: true">
+                             data-dojo-props="iconClass: 'iconLeftPanel', showLabel: false, checked: true, title: 'Скрыть\\показать левую панель'">
                         </div>
 
                         <div data-dojo-attach-point="bottomToolbarSwitch"
                             data-dojo-attach-event="onChange: switchBottomToolbar"
                             data-dojo-type="dijit/form/ToggleButton"
-                            data-dojo-props="iconClass: 'iconBottomPanel', showLabel: false, checked: true">
+                            data-dojo-props="iconClass: 'iconBottomPanel', showLabel: false, checked: true, title: 'Скрыть\\показать нижнюю панель'">
                         </div>
 
                         <div data-dojo-attach-point="rightToolbarSwitch"
                             data-dojo-attach-event="onChange: switchRightToolbar"
                             data-dojo-type="dijit/form/ToggleButton"
-                            data-dojo-props="iconClass: 'iconRightPanel', showLabel: false, checked: true">
+                            data-dojo-props="iconClass: 'iconRightPanel', showLabel: false, checked: true, title: 'Скрыть\\показать правую панель'">
                         </div>
 
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
