--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -136,10 +136,9 @@
                             data-dojo-props="region: 'top'">
 
                             <div data-dojo-type="dijit/form/DropDownButton"
-                                data-dojo-props="label: 'ВОЛС'">
+                                data-dojo-props="label: 'ВОЛС'" id="treeTypeSelectorDropDown">
                                 
-                                <div data-dojo-attach-point="itemMenu"
-                                    data-dojo-type="dijit/Menu">
+                                <div data-dojo-type="dijit/Menu" id="treeTypeSelectorMenu">
                                     <div data-dojo-type="dijit/MenuItem"
                                          data-dojo-props="label: 'ВОЛС'">
                                     </div>
@@ -196,16 +195,20 @@
                             data-dojo-props="region: 'center'"
                             style="padding: 0">
                             <div class="title">Слои ВОЛС</div>
-                            <div id="foclLayersTree"></div>
+                            <div class="tree-wrapper">
+                                <div id="foclLayersTree"></div>
+                            </div>
                         </div>
 
                         <!-- Панель для размещения списка типа слоев Сит плана-->
                         <div data-dojo-attach-point="sitPlanLayersTreePane"
-                            data-dojo-type="dijit/layout/ContentPane"
-                            data-dojo-props="region: 'bottom', splitter: true"
-                            style="padding: 0; height: 50%">
+                             data-dojo-type="dijit/layout/ContentPane"
+                             data-dojo-props="region: 'bottom', splitter: true"
+                             style="padding: 0; height: 50%">
                             <div class="title">Слои Сит. плана</div>
-                            <div id="spLayersTree"></div>
+                            <div class="tree-wrapper">
+                                <div id="spLayersTree"></div>
+                            </div>
                         </div>
 
                     </div>
