--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -135,22 +135,11 @@
                         <div data-dojo-type="dijit/Toolbar"
                             data-dojo-props="region: 'top'">
 
-                            <div data-dojo-type="dijit/form/DropDownButton"
-                                data-dojo-props="label: 'ВОЛС'" id="treeTypeSelectorDropDown">
-                                
-                                <div data-dojo-type="dijit/Menu" id="treeTypeSelectorMenu">
-                                    <div data-dojo-type="dijit/MenuItem"
-                                         data-dojo-props="label: 'ВОЛС'">
-                                    </div>
-                                    <div data-dojo-type="dijit/MenuItem"
-                                         data-dojo-props="label: 'Ситуационные планы'">
-                                    </div>
-                                    <div data-dojo-type="dijit/MenuItem"
-                                         data-dojo-props="label: 'ВОЛС и Ситуационные планы'">
-                                    </div>
-                                </div>
-
-                            </div>
+                            <select data-dojo-type="dijit/form/Select" id="resourcesTypeSelector">
+                                <option value="TN" selected="selected">ВОЛС и Ситуационные планы</option>
+                                <option value="VA">Ситуационные планы</option>
+                                <option value="WA">ВОЛС</option>
+                            </select>
 
                         </div>
 
