--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -10,6 +10,12 @@
 
 /* resource tree styles */
 
+#resourcesTree {
+    width: 98%;
+    height: 98%;
+    margin: 1%;
+}
+
 #resourcesTree a[chb="false"] i.jstree-checkbox {
     display: none;
 }
@@ -40,13 +46,37 @@
     overflow: hidden;
 }
 
-#rightPanel div.tree-wrapper {
-    overflow: auto;
+#rightPanel div.tree-wrapper,
+#rightPanel div.tree-overlay {
     position: absolute;
     top: 23px;
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+#rightPanel div.tree-wrapper {
+    overflow: auto;
+}
+
+#rightPanel div.tree-overlay {
+    display: none;
+    background-image: url(../img/disabled-overlay.png);
+    opacity: 0.6;
+    z-index: 9999;
+}
+
+#rightPanel.vols-disabled div.vols div.tree-overlay {
+    display: block;
+}
+
+#rightPanel.vols-disabled div.vols div.tree-wrapper,
+#rightPanel.sit-disabled div.sit div.tree-wrapper {
+    overflow: hidden;
+}
+
+#rightPanel.sit-disabled div.sit div.tree-overlay {
+    display: block;
 }
 
 #rightPanel i.jstree-ocl {
