#3 LayersSelector was added to Display module

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -1,43 +1,43 @@
 <div data-dojo-type="${baseClass}"
-    data-dojo-attach-point="focusNode"
-    style="width: 100%; height: 100%">
+     data-dojo-attach-point="focusNode"
+     style="width: 100%; height: 100%">
 
     <div data-dojo-attach-point="tabContainer"
-        data-dojo-type="dijit/layout/TabContainer"
-        data-dojo-props="tabPosition: 'top'"
-        style="width: 100%; height: 100%;">
+         data-dojo-type="dijit/layout/TabContainer"
+         data-dojo-props="tabPosition: 'top'"
+         style="width: 100%; height: 100%;">
 
         <!-- Незакрываемый таб для размещения карты и дерева слоев -->
         <!-- Если у таба нет иконки и он незакрываем, то плывет верстка! -->
         <div data-dojo-attach-point="mainPane" title="Карта"
-            data-dojo-type="dijit/layout/ContentPane"
-            data-dojo-props="closable: false, iconClass: 'iconMap'"
-            style="width: 100%; height: 100%; padding: 0">
+             data-dojo-type="dijit/layout/ContentPane"
+             data-dojo-props="closable: false, iconClass: 'iconMap'"
+             style="width: 100%; height: 100%; padding: 0">
 
-            <div id = "mainContainer"
+            <div id="mainContainer"
                  data-dojo-type="dijit/layout/BorderContainer"
                  data-dojo-props="gutters: false"
                  style="width: 100%; height: 100%;">
 
                 <!-- Панель для размещения OL карты -->
                 <div id="centerContainer"
-                    data-dojo-type="dijit/layout/BorderContainer"
-                    data-dojo-props="region: 'center'"
-                    style="padding-left: 0; padding-right: 0px">
+                     data-dojo-type="dijit/layout/BorderContainer"
+                     data-dojo-props="region: 'center'"
+                     style="padding-left: 0; padding-right: 0px">
 
                     <!-- Тулбар над картой -->
                     <div data-dojo-attach-point="mapToolbar"
-                        data-dojo-type="dijit/Toolbar"
-                        data-dojo-props="region: 'top'">
+                         data-dojo-type="dijit/Toolbar"
+                         data-dojo-props="region: 'top'">
 
                         <div style="padding: 0 4px; float: right;">
 
-                            <div data-dojo-attach-point="bookmarkButton" 
-                                data-dojo-type="dijit/form/DropDownButton"
-                                data-dojo-props="label: 'Закладки', iconClass: 'dijitIconBookmark'">
+                            <div data-dojo-attach-point="bookmarkButton"
+                                 data-dojo-type="dijit/form/DropDownButton"
+                                 data-dojo-props="label: 'Закладки', iconClass: 'dijitIconBookmark'">
 
                                 <div data-dojo-attach-point="bookmarkMenu"
-                                    data-dojo-type="dijit/Menu">
+                                     data-dojo-type="dijit/Menu">
                                 </div>
 
                             </div>
@@ -47,8 +47,8 @@
                         <div data-dojo-type="dijit/form/Button" style="width: 0;">&nbsp;</div>
 
                         <div data-dojo-attach-point="zoomToInitialExtentButton"
-                            data-dojo-type="dijit/form/Button"
-                            data-dojo-props="iconClass: 'iconArrowInOut', showLabel: false">
+                             data-dojo-type="dijit/form/Button"
+                             data-dojo-props="iconClass: 'iconArrowInOut', showLabel: false">
                         </div>
 
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
@@ -60,52 +60,58 @@
                         </div>
 
                         <div data-dojo-attach-point="bottomToolbarSwitch"
-                            data-dojo-attach-event="onChange: switchBottomToolbar"
-                            data-dojo-type="dijit/form/ToggleButton"
-                            data-dojo-props="iconClass: 'iconBottomPanel', showLabel: false, checked: true, title: 'Скрыть\\показать нижнюю панель'">
+                             data-dojo-attach-event="onChange: switchBottomToolbar"
+                             data-dojo-type="dijit/form/ToggleButton"
+                             data-dojo-props="iconClass: 'iconBottomPanel', showLabel: false, checked: true, title: 'Скрыть\\показать нижнюю панель'">
                         </div>
 
                         <div data-dojo-attach-point="rightToolbarSwitch"
-                            data-dojo-attach-event="onChange: switchRightToolbar"
-                            data-dojo-type="dijit/form/ToggleButton"
-                            data-dojo-props="iconClass: 'iconRightPanel', showLabel: false, checked: true, title: 'Скрыть\\показать правую панель'">
+                             data-dojo-attach-event="onChange: switchRightToolbar"
+                             data-dojo-type="dijit/form/ToggleButton"
+                             data-dojo-props="iconClass: 'iconRightPanel', showLabel: false, checked: true, title: 'Скрыть\\показать правую панель'">
                         </div>
 
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
 
                         <div data-dojo-attach-point="infoNode"
-                            style="display: inline-block; vertical-align: middle; float: right; padding: 0 4px;">
+                             style="display: inline-block; vertical-align: middle; float: right; padding: 0 4px;">
 
                             <div data-dojo-type="dijit/form/Button" style="width: 0;">&nbsp;</div>
 
                             <span style="color: #999">Долгота</span>
                             <span data-dojo-attach-point="centerLonNode"></span>
-                            
+
                             <span style="color: #999">Широта</span>
                             <span data-dojo-attach-point="centerLatNode"></span>
 
                             <span style="color: #999">Масштаб</span>
                             <span data-dojo-attach-point="scaleInfoNode"></span>
-                            
+
                         </div>
 
 
                     </div>
 
                     <div data-dojo-attach-point="mapPane"
-                        data-dojo-type="dijit/layout/ContentPane"
-                        data-dojo-props="region: 'center'"
-                        style="width: 100%; padding: 0;">
+                         data-dojo-type="dijit/layout/ContentPane"
+                         data-dojo-props="region: 'center'"
+                         style="width: 100%; padding: 0;">
 
                         <div data-dojo-attach-point="mapNode"
-                            style="position: absolute; width: 100%; height: 100%; padding: 0;">
+                             style="position: absolute; width: 100%; height: 100%; padding: 0;">
 
                             <div style="position: absolute; top: 0; right: 0; z-index: 2000; margin: 4px; background-color: rgba(255, 255, 255, 0.5)">
-                                <a href="http://nextgis.ru/nextgis-web/" target="_blank"><img src="${assetUrl}img/nextgis.png"/></a>
+                                <a href="http://nextgis.ru/nextgis-web/" target="_blank"><img
+                                        src="${assetUrl}img/nextgis.png"/></a>
                             </div>
-                            <a id="permalink" data-dojo-attach-event="onclick:_getPermalink" href="#" style="position: absolute; bottom: 20px; right: 0; z-index: 2000; margin: 4px; font-size: smaller;">Ссылка</a>
-                            <div data-dojo-attach-point="permalinkDialog" data-dojo-type="dijit/Dialog" data-dojo-props="title: 'Ссылка', autofocus: false, draggable: false" style="display: none;">
-                                <div data-dojo-attach-point="permalinkContent" data-dojo-type="dijit/form/TextBox" data-dojo-props="readOnly: false, selectOnClick: true" style="width: 300px;"></div>
+                            <a id="permalink" data-dojo-attach-event="onclick:_getPermalink" href="#"
+                               style="position: absolute; bottom: 20px; right: 0; z-index: 2000; margin: 4px; font-size: smaller;">Ссылка</a>
+
+                            <div data-dojo-attach-point="permalinkDialog" data-dojo-type="dijit/Dialog"
+                                 data-dojo-props="title: 'Ссылка', autofocus: false, draggable: false"
+                                 style="display: none;">
+                                <div data-dojo-attach-point="permalinkContent" data-dojo-type="dijit/form/TextBox"
+                                     data-dojo-props="readOnly: false, selectOnClick: true" style="width: 300px;"></div>
                             </div>
                         </div>
 
@@ -128,12 +134,12 @@
                      style="width: 250px; padding: 0;">
 
                     <div data-dojo-type="dijit/layout/BorderContainer"
-                        data-dojo-props="region: 'center'"
-                        style="padding-bottom: 0; padding-right: 0">
-            
+                         data-dojo-props="region: 'center'"
+                         style="padding-bottom: 0; padding-right: 0">
+
                         <!-- Тулбар над деревом слоев -->
                         <div data-dojo-type="dijit/Toolbar"
-                            data-dojo-props="region: 'top'">
+                             data-dojo-props="region: 'top'">
 
                             <select data-dojo-type="dijit/form/Select" id="resourcesTypeSelector">
                                 <option value="TN" selected="selected">ВОЛС и Ситуационные планы</option>
@@ -145,9 +151,9 @@
 
                         <!-- Панель для размещения дерева ресурсов -->
                         <div data-dojo-attach-point="resourceTreePane"
-                            data-dojo-type="dijit/layout/ContentPane"
-                            data-dojo-props="region: 'center'"
-                            style="padding: 0">
+                             data-dojo-type="dijit/layout/ContentPane"
+                             data-dojo-props="region: 'center'"
+                             style="padding: 0">
                             <div id="resourcesTree"></div>
                         </div>
 
@@ -155,13 +161,13 @@
 
                     <!-- Панель для размещения переключателя подложки -->
                     <div data-dojo-attach-point="basemapPane"
-                        data-dojo-type="dijit/layout/ContentPane"
-                        data-dojo-props="region: 'bottom', border: false"
-                        style="padding-left: 5px; padding-right: 2px;">
+                         data-dojo-type="dijit/layout/ContentPane"
+                         data-dojo-props="region: 'bottom', border: false"
+                         style="padding-left: 5px; padding-right: 2px;">
 
                         <select data-dojo-attach-point="basemapSelect"
-                            data-dojo-type="dijit/form/Select" 
-                            style="width: 100%;">
+                                data-dojo-type="dijit/form/Select"
+                                style="width: 100%;">
                         </select>
 
                     </div>
@@ -173,8 +179,38 @@
                      data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'right', splitter: true, gutters: false"
                      style="width: 250px; padding: 0;">
-                </div>
 
+
+                    <div data-dojo-type="dijit/layout/BorderContainer"
+                         data-dojo-props="region: 'center'"
+                         style="padding-left: 0; position: relative;">
+
+                        <!-- Панель для размещения списка типа слоев ВОЛС -->
+                        <div data-dojo-attach-point="foclLayersTreePane"
+                             data-dojo-type="dijit/layout/ContentPane"
+                             data-dojo-props="region: 'center'"
+                             style="padding: 0; height: 50%; position: relative;" class="vols">
+                            <div class="title">Слои ВОЛС</div>
+                            <div class="tree-overlay"></div>
+                            <div class="tree-wrapper">
+                                <div id="foclLayersTree"></div>
+                            </div>
+                        </div>
+
+                        <!-- Панель для размещения списка типа слоев Сит плана-->
+                        <div data-dojo-attach-point="sitPlanLayersTreePane"
+                             data-dojo-type="dijit/layout/ContentPane"
+                             data-dojo-props="region: 'bottom', splitter: true"
+                             style="padding: 0; height: 50%; position: relative;" class="sit">
+                            <div class="title">Слои Сит. плана</div>
+                            <div class="tree-overlay"></div>
+                            <div class="tree-wrapper">
+                                <div id="spLayersTree"></div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
