--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -142,9 +142,9 @@
                              data-dojo-props="region: 'top'">
 
                             <select data-dojo-type="dijit/form/Select" id="resourcesTypeSelector">
-                                <option value="TN" selected="selected">ВОЛС и Ситуационные планы</option>
-                                <option value="VA">Ситуационные планы</option>
-                                <option value="WA">ВОЛС</option>
+                                <option value="all" selected="selected">ВОЛС и Ситуационные планы</option>
+                                <option value="sit">Ситуационные планы</option>
+                                <option value="vols">ВОЛС</option>
                             </select>
 
                         </div>
