--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -176,6 +176,7 @@
 
                 <!-- Правая панель -->
                 <div id='rightPanel'
+                     data-resource-type-filter="",
                      data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'right', splitter: true, gutters: false"
                      style="width: 250px; padding: 0;">
