#9 fixed by using states of nodes: set 'disabled' state for nodes without checkboxes

--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -34,6 +34,19 @@
     background-position: -48px, -2px;
 }
 
+#resourcesTree a.jstree-disabled {
+    color: black;
+}
+
+#resourcesTree a.jstree-disabled > i.jstree-icon {
+   opacity: 1;
+  /* Firefox 10+ */
+  filter: none;
+  /* IE6-9 */
+   -webkit-filter: none;
+  /* Chrome 19+ & Safari 6+ */
+}
+
 /* right panel trees */
 
 #foclLayersTree .jstree-icon.jstree-themeicon,
