Сдвиг карты по координатам

--- a/nextgisweb_compulink/compulink_site/static/css/icons.css
+++ b/nextgisweb_compulink/compulink_site/static/css/icons.css
@@ -27,3 +27,13 @@
     -o-background-size: cover; /* Opera*/
     background-size: cover; /* Generic*/
 }
+
+.iconMoveTo {
+    background: url('../img/move_to.png') no-repeat;
+    width: 16px;
+    height: 16px;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover; /* Mozilla*/
+    -o-background-size: cover; /* Opera*/
+    background-size: cover; /* Generic*/
+}
