--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -51,6 +51,35 @@
                              data-dojo-props="iconClass: 'iconArrowInOut', showLabel: false">
                         </div>
 
+                        <div data-dojo-type="dijit/form/DropDownButton"
+                             data-dojo-props="iconClass: 'iconMoveTo', showLabel: false, title: 'Перейти к координатам'">
+
+                            <div data-dojo-type="dijit/TooltipDialog">
+                                <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols: 1">
+
+                                    <div data-dojo-attach-point="moveToLat"
+                                        data-dojo-type="dijit/form/NumberTextBox"
+                                        data-dojo-props="constraints: {min: -180, max: +180}, trim: true"
+                                        title="Широта, град."
+                                        style="width: 100%">
+                                    </div>
+
+                                    <div data-dojo-attach-point="moveToLon"
+                                        data-dojo-type="dijit/form/NumberTextBox"
+                                        data-dojo-props="constraints: {min: -180, max: +180}, trim: true"
+                                        title="Долгота, град."
+                                        style="width: 100%">
+                                    </div>
+
+                                </div>
+
+                                <div data-dojo-attach-point="moveToCoordinatesButton"
+                                    data-dojo-type="dijit/form/Button"
+                                    data-dojo-props="label: 'OK'">
+                                </div>
+                            </div>
+                        </div>
+
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
 
                         <div data-dojo-attach-point="leftToolbarSwitch"
