Хак для отображения панели поиска объектов

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -32,6 +32,11 @@
 
                         <div style="padding: 0 4px; float: right;">
 
+                            <div data-dojo-attach-point="itemMenu"
+                                 data-dojo-type="dijit/Menu"
+                                 style="display:none">
+                            </div>
+
                             <div data-dojo-attach-point="bookmarkButton"
                                  data-dojo-type="dijit/form/DropDownButton"
                                  data-dojo-props="label: 'Закладки', iconClass: 'dijitIconBookmark'">
