Закрываем диалог ввода координат, close #24

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -56,7 +56,8 @@
                              data-dojo-props="iconClass: 'iconArrowInOut', showLabel: false">
                         </div>
 
-                        <div data-dojo-type="dijit/form/DropDownButton"
+                        <div data-dojo-attach-point="moveToCoordinates"
+                             data-dojo-type="dijit/form/DropDownButton"
                              data-dojo-props="iconClass: 'iconMoveTo', showLabel: false, title: 'Перейти к координатам'">
 
                             <div data-dojo-type="dijit/TooltipDialog">
