Сокращение надписей, close #36

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -113,13 +113,13 @@
 
                             <div data-dojo-type="dijit/form/Button" style="width: 0;">&nbsp;</div>
 
-                            <span style="color: #999">Долгота</span>
+                            <span style="color: #999">Д</span>
                             <span data-dojo-attach-point="centerLonNode"></span>
 
-                            <span style="color: #999">Широта</span>
+                            <span style="color: #999">Ш</span>
                             <span data-dojo-attach-point="centerLatNode"></span>
 
-                            <span style="color: #999">Масштаб</span>
+                            <span style="color: #999">М</span>
                             <span data-dojo-attach-point="scaleInfoNode"></span>
 
                         </div>
