--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -80,10 +80,27 @@
     z-index: 9999;
 }
 
-#rightPanel[data-resource-type-filter=vols] div.sit div.tree-overlay,
-#rightPanel[data-resource-type-filter=sit] div.vols div.tree-overlay {
-    display: block;
+#rightPanel[data-resource-type-filter=vols] div.sit,
+#rightPanel[data-resource-type-filter=sit] div.vols {
+    display: none;
 }
+
+#rightPanel[data-resource-type-filter=vols] div.vols,
+#rightPanel[data-resource-type-filter=sit] div.sit {
+    top: 5px !important;
+    bottom: 5px !important;
+    height: auto !important;
+}
+
+#rightPanel[data-resource-type-filter=vols] div.dijitSplitter,
+#rightPanel[data-resource-type-filter=sit] div.dijitSplitter {
+    display: none;
+}
+
+/*#rightPanel[data-resource-type-filter=vols] div.sit div.tree-overlay,*/
+/*#rightPanel[data-resource-type-filter=sit] div.vols div.tree-overlay {*/
+    /*display: block;*/
+/*}*/
 
 #rightPanel[data-resource-type-filter=vols] div.sit div.tree-wrapper,
 #rightPanel[data-resource-type-filter=sit] div.vols div.tree-wrapper {
